[package]
name = "flower"
version = "0.1.0"
authors = ["Daniel Mason <daniel.mason@triptease.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.4"
isahc = "0.9"
rppal = "0.11"
scraper = "0.12"
